Resposnive Simulation modified

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -292,7 +292,7 @@
             </div>
           </div>
           <div id="comments" class="main__task-div">
-            <h3 class="task-title">controls</h3>
+            <h3 class="task-title">Controls</h3>
             <div class="settings-sections">
               <div class="comment-sections">
                 <!-- Checkbox to display graph-->
